Prevent tips from overlapping green "refuelling done" bars.

--- a/css/aa.css
+++ b/css/aa.css
@@ -3115,7 +3115,7 @@ body.bnb .sprite.engineer.butthead.building {
   height: 13px;
   left: 0;
   position: absolute;
-  top: 90px;
+  top: 95px;
   width: 100%;
 }
 
